[package]
name = "bunnysync"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "sync", "fs", "time", "io-util"] }
reqwest = { version = "0.13.2", features = ["json"] }
git2 = "0.20.4"
hmac = "0.13"
sha2 = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower = "0.5.3"
tower-http = "0.6.8"
hex = "0.4.3"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tempfile = "3.27.0"
urlencoding = "2.1.3"
md5 = "0.7.0"
walkdir = "2.5.0"
tokio-util = { version = "0.7.18", features = ["io"] }
