[package]
name = "bunnysync"
version = "1.6.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "fs", "time", "io-util"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "http2"] }
gix = { version = "0.81.0", default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "worktree-mutation", "sha1", "parallel"] }
hmac = "0.13"
sha2 = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower = "0.5.3"
tower-http = "0.6.8"
hex = "0.4.3"
ed25519-dalek = "2"
base64 = "0.22"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tempfile = "3.27.0"
urlencoding = "2.1.3"
md5 = "0.8.0"
walkdir = "2.5.0"
tokio-util = { version = "0.7.18", features = ["io"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
